# unified-cli-mcp

./: HANDOFF.md  LICENSE  README.md  pyproject.toml
archive/: server-dynamic-per-backend-2026-03-06.py
tests/: test_core.py
unified_cli_mcp/: __init__.py  __main__.py  core.py  server.py
