[project]
name = "unified-cli-mcp"
version = "0.1.0"
description = "MCP server exposing local CLI backends as lightweight tools"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "dev-boz" },
]
keywords = ["mcp", "model-context-protocol", "claude-code", "codex", "gemini", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dev-boz/unified-cli-mcp"
Repository = "https://github.com/dev-boz/unified-cli-mcp"
Issues = "https://github.com/dev-boz/unified-cli-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
unified-cli-mcp = "unified_cli_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
